// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SideNav/> component should render correctly 1`] = `
<Fragment>
  <ThemeSwitch
    className="themeSwitch"
  />
  <BurgerMenu
    className="icon"
    onClick={[Function]}
  />
  <CrossIcon
    className="crossIcon icon"
    onClick={[Function]}
  />
  <div
    className="menuContainer menuClose menuHideFirstRender"
    onClick={[Function]}
  >
    <div
      className="menuContent"
      onClick={[Function]}
    >
      <ul
        className="menuList"
      >
        <li
          className="menuItem"
        >
          <NavLink
            className="link menuItemMargin"
            onClick={[Function]}
            to="/"
          >
            Home
          </NavLink>
        </li>
        <li
          className="menuItem"
        >
          <NavLink
            className="link menuItemMargin"
            onClick={[Function]}
            to="/about"
          >
            About
          </NavLink>
        </li>
        <li
          className="menuItem"
        >
          <NavLink
            className="link menuItemMargin"
            onClick={[Function]}
            to="/contact"
          >
            Contact
          </NavLink>
        </li>
      </ul>
    </div>
  </div>
</Fragment>
`;

exports[`<SideNav/> component when clicking on the burger menu and then clicking on the cross icon should close the side nav 1`] = `
<SideNav>
  <ThemeSwitch
    className="themeSwitch"
  >
    <button
      className="themeSwitch"
      type="button"
    />
  </ThemeSwitch>
  <BurgerMenu
    className="icon"
    onClick={[Function]}
  >
    <button
      className="icon"
      onClick={[Function]}
      type="button"
    />
  </BurgerMenu>
  <CrossIcon
    className="crossIcon icon"
    onClick={[Function]}
  >
    <button
      className="crossIcon icon"
      onClick={[Function]}
      type="button"
    />
  </CrossIcon>
  <div
    className="menuContainer menuClose"
    onClick={[Function]}
  >
    <div
      className="menuContent"
      onClick={[Function]}
    >
      <ul
        className="menuList"
      >
        <li
          className="menuItem"
        >
          <NavLink
            className="link menuItemMargin"
            onClick={[Function]}
            to="/"
          >
            <button
              type="button"
            >
              Home
            </button>
          </NavLink>
        </li>
        <li
          className="menuItem"
        >
          <NavLink
            className="link menuItemMargin"
            onClick={[Function]}
            to="/about"
          >
            <button
              type="button"
            >
              About
            </button>
          </NavLink>
        </li>
        <li
          className="menuItem"
        >
          <NavLink
            className="link menuItemMargin"
            onClick={[Function]}
            to="/contact"
          >
            <button
              type="button"
            >
              Contact
            </button>
          </NavLink>
        </li>
      </ul>
    </div>
  </div>
</SideNav>
`;

exports[`<SideNav/> component when clicking on the burger menu and then clicking on the overlay should close the side nav 1`] = `
<SideNav>
  <ThemeSwitch
    className="themeSwitch"
  >
    <button
      className="themeSwitch"
      type="button"
    />
  </ThemeSwitch>
  <BurgerMenu
    className="icon"
    onClick={[Function]}
  >
    <button
      className="icon"
      onClick={[Function]}
      type="button"
    />
  </BurgerMenu>
  <CrossIcon
    className="crossIcon icon"
    onClick={[Function]}
  >
    <button
      className="crossIcon icon"
      onClick={[Function]}
      type="button"
    />
  </CrossIcon>
  <div
    className="menuContainer menuClose"
    onClick={[Function]}
  >
    <div
      className="menuContent"
      onClick={[Function]}
    >
      <ul
        className="menuList"
      >
        <li
          className="menuItem"
        >
          <NavLink
            className="link menuItemMargin"
            onClick={[Function]}
            to="/"
          >
            <button
              type="button"
            >
              Home
            </button>
          </NavLink>
        </li>
        <li
          className="menuItem"
        >
          <NavLink
            className="link menuItemMargin"
            onClick={[Function]}
            to="/about"
          >
            <button
              type="button"
            >
              About
            </button>
          </NavLink>
        </li>
        <li
          className="menuItem"
        >
          <NavLink
            className="link menuItemMargin"
            onClick={[Function]}
            to="/contact"
          >
            <button
              type="button"
            >
              Contact
            </button>
          </NavLink>
        </li>
      </ul>
    </div>
  </div>
</SideNav>
`;

exports[`<SideNav/> component when clicking on the burger menu should open the side nav 1`] = `
<SideNav>
  <ThemeSwitch
    className="themeSwitch"
  >
    <button
      className="themeSwitch"
      type="button"
    />
  </ThemeSwitch>
  <BurgerMenu
    className="icon burgerMenuHide"
    onClick={[Function]}
  >
    <button
      className="icon burgerMenuHide"
      onClick={[Function]}
      type="button"
    />
  </BurgerMenu>
  <CrossIcon
    className="crossIcon icon crossIconShow"
    onClick={[Function]}
  >
    <button
      className="crossIcon icon crossIconShow"
      onClick={[Function]}
      type="button"
    />
  </CrossIcon>
  <div
    className="menuContainer menuOpen"
    onClick={[Function]}
  >
    <div
      className="menuContent"
      onClick={[Function]}
    >
      <ul
        className="menuList"
      >
        <li
          className="menuItem"
        >
          <NavLink
            className="link menuItemMargin"
            onClick={[Function]}
            to="/"
          >
            <button
              type="button"
            >
              Home
            </button>
          </NavLink>
        </li>
        <li
          className="menuItem"
        >
          <NavLink
            className="link menuItemMargin"
            onClick={[Function]}
            to="/about"
          >
            <button
              type="button"
            >
              About
            </button>
          </NavLink>
        </li>
        <li
          className="menuItem"
        >
          <NavLink
            className="link menuItemMargin"
            onClick={[Function]}
            to="/contact"
          >
            <button
              type="button"
            >
              Contact
            </button>
          </NavLink>
        </li>
      </ul>
    </div>
  </div>
</SideNav>
`;
